# format-translator

./: .prettierignore  package.json  tailwind.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  PROMPT.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: CopyPre.svelte  Titlebar.svelte  types.ts
src/routes/: +layout.svelte  +page.svelte  CodeBlock.svelte  Translator.svelte
