[package]
name = "format-translator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "format_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = { version = "0.2", features = ["stream"] }
thiserror = "2.0"
url = "2.5"
futures-util = "0.3"
tauri-plugin-clipboard-manager = "2.2"

